<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bo.alxmcr.app.activities.main.DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/numberOfConnectionsDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_color_red"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textViewTitleDashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_activity_dashboard"
            android:textColor="@android:color/black"
            android:textSize="45sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnActionNewWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_color_turquoise"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/literal_btn_new_word"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnActionListWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_color_turquoise"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/literal_btn_list_words"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnActionSearchWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_color_turquoise"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/literal_btn_search_word"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
