<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bo.alxmcr.app.activities.word.CreateWordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/numberOfConnectionsDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_color_red"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textViewTitleNewWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_activity_create_word"
            android:textColor="@android:color/black"
            android:textSize="45sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextNewWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="textAutoComplete"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSaveNewWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_color_turquoise"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/literal_btn_save_word"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCleanUpNewWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_color_turquoise"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/literal_btn_cleanup_word"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>


</ScrollView>
