<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bo.alxmcr.app.activities.meaning.CreateMeaningActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/numberOfConnectionsDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_color_red"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textViewTitleNewMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_activity_create_meaning"
            android:textColor="@android:color/black"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewIdWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="1234567890123456"
            android:textColor="@android:color/black"
            android:textSize="10sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/editTextNewMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="textAutoComplete"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSaveNewMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_color_turquoise"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/literal_btn_save_meaning"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCleanUpNewMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_color_turquoise"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/literal_btn_cleanup_meaning"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>


</ScrollView>
