<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bo.alxmcr.app.activities.meaning.EditMeaningActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/numberOfConnectionsDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_color_red"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textViewTitleEditMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:gravity="center"
            android:text="@string/title_activity_edit_meaning"
            android:textColor="@android:color/black"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewIdMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="IdMeaning:"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextIdMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:inputType="text"/>

        <TextView
            android:id="@+id/textViewTextMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Text:"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextTextMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:inputType="text"/>

        <TextView
            android:id="@+id/textViewStatusMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Status:"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextStatusMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:inputType="text"/>

        <Button
            android:id="@+id/btnSaveEditMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_color_turquoise"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/literal_btn_save_meaning"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCleanUpEditMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_color_turquoise"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/literal_btn_cleanup_meaning"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>
